-- 2023.01.22 - ...

- feat: Add translation for Spanish language (by criskkky)
- feat: Add translation for Chinese (Simplified, People's Republic of China) language (by TianxSky)
- feat: CFG to set custom name for LVLRanks Table (#102)
- fix: DynamicPoints integer devision (by TianxSky)
- fix: Change timestamp to unix timestamp (by stefanx111)
- fix: Missing prefixes for MySQL queries (by rigE08)
- fix: Block MySQL save for people with SteamID = 0

-- 2023.12.30 - V3.0.5

- fix: KillStreak resets on spawn

-- 2023.12.29 - V3.0.4

- fix: KillStreaks after bot control
- fix: Stats not saved
- fix: Remove debug print
- fix: NaN values in stats

-- 2023.12.29 - V3.0.3

- feat: Add translation for Latvian language (by rcon420)
- feat: Killstreak can be now "remembered" until player die (seconds-between-kills = 0)
- fix: MySQL support for emojis and special characters
- fix: Add emoji support for player names
- fix: Replace STEAM_0 with STEAM_1 to match old lvlranks
- fix: TeamChange to winnerteam before win exploit

-- 2023.12.29 - V3.0.2

- feat: Add translation for Russian language (by ViTamin)
- refactor: Remove unused imports
- fix: Invisible player on clantag change
- fix: Permission giving on player connect
- fix: Add missing translations
- fix: Add missing commands to !k4
- fix: Negative savepoints calulcated as positive

-- 2023.12.29 - V3.0.1

- feat: add tr translate by @onurcanertekin in #95
- fix: Time command extra symbols
- fix: Players not loaded after mapchange (#94)
- fix: DynamicDeathPoints
- fix: Double negative symbols
- fix: LevelRanks rank ids
- fix: Type enforcement
- fix: LevelRanks steamid changed
- fix: Italian Translation
- chore: Update module version to 3.0.1
- chore: Add Turkish translator name
- chore: Update README and CHANGELOG
- upgrade: Better SteamID conversion for LevelRanks

-- 2023.12.29 - V3.0.0

- feat: Check available ranks with details (#91)
- feat: Translations added (#1)
- feat: FFA mode support for game win/lose